implemented navigation bar, minor updates to login and signup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">usctreehole</string>
+    <string name="app_name">USC Tree Hole</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string-array name="roles_array">
         <item>Undergraduate Student</item>
         <item>Graduate Student</item>
