implemented functionality for displaying life posts as well as creating posts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
         <item>Faculty</item>
         <item>Staff</item>
     </string-array>
+    <string-array name="categories_array">
+        <item>Life</item>
+        <item>Academic</item>
+        <item>Event</item>
+    </string-array>
 </resources>
